k8s/resource-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-ns
  labels:
    name: service-ns
