k8s/resource-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: service-ns
  labels:
    app: service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
      name: http
    - port: 9876
      targetPort: 9876
      name: debug
    - port: 9875
      targetPort: 9875
      name: jmx
  selector:
    app: service
